hphp/test/zend/bad/tests-output/bug60322.php
<?php
while(ob_get_clean()) ;
var_dump(ob_get_clean());